--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,110 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="warning">
+    <ion-title>Gospel of Luke</ion-title>
+  </ion-toolbar>
+  <ion-toolbar color="warning">
+    <ion-searchbar placeholder="Search"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+
+<ion-content [fullscreen]="true">
+
+
+  <div class="container">
+
+  
+  <img src="../../assets/images/creationofadam.jpg" width="100%" height="100%" alt="">
+  
+    <ion-grid>
+      <ion-row>
+        
+        <ion-col size-xs="12" size-s="6" size-md="6" size-lg="4" *ngFor = "let gospels of gospel">
+
+          <ion-card>
+
+            <ion-card-header>
+              <ion-card-subtitle>{{gospels.topicTitle}}</ion-card-subtitle>
+              <ion-card-title>{{gospels.subTitle}}</ion-card-title>
+            </ion-card-header>
+
+            <ion-card-content>
+              {{gospels.chapter_verse}}
+            </ion-card-content>
+
+          </ion-card>
+
+        </ion-col>
+
+      </ion-row>
+    </ion-grid>
+    
+
+
+    <!-- <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>NIV</ion-card-subtitle>
+        <ion-card-title>Luke 16:19</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        There was a rich man who was dressed in purple and fine linen and lived in luxury every day.
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>NIV</ion-card-subtitle>
+        <ion-card-title>Luke 1:35</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        The angel answered, "The Holy Spirit will come on you, and the power of the Most High will overshadow you. 
+        So the holy one to be born will be called the Son of God."
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>NIV</ion-card-subtitle>
+        <ion-card-title>Luke 1:35</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        The angel answered, "The Holy Spirit will come on you, and the power of the Most High will overshadow you. 
+        So the holy one to be born will be called the Son of God."
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>NIV</ion-card-subtitle>
+        <ion-card-title>Luke 1:35</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        The angel answered, "The Holy Spirit will come on you, and the power of the Most High will overshadow you. 
+        So the holy one to be born will be called the Son of God."
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>NIV</ion-card-subtitle>
+        <ion-card-title>Luke 1:35</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        The angel answered, "The Holy Spirit will come on you, and the power of the Most High will overshadow you. 
+        So the holy one to be born will be called the Son of God."
+      </ion-card-content>
+    </ion-card> -->
+
+
   </div>
+
+
+
+
 </ion-content>
