--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,49 @@
-#container {
-  text-align: center;
+// #container {
+//   text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+
+//   color: #8c8c8c;
+
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
+
+
+ion-toolbar {
+  padding-bottom: 15px;
+
+  ion-title {
+    font-size: 18px;
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+img {
+  padding:20px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+ion-card {
+  height: 85%;
 
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  ion-card-title {
+    font-size: 20px;
+  }
+  
 }
